--- a/resources/NewsApplication_UI/src/app/Layout/partials/client/header-client/header-client.component.html
+++ b/resources/NewsApplication_UI/src/app/Layout/partials/client/header-client/header-client.component.html
@@ -1,65 +1,77 @@
-<!-- Topbar Start -->
+<div class="container-fluid fh5co_header_bg">
+  <div class="container">
+      <div class="row">
+          <div class="col-12 fh5co_mediya_center"><a href="./assets/#" class="color_fff fh5co_mediya_setting"><i
+                  class="fa fa-clock-o"></i>&nbsp;&nbsp;&nbsp;{{ currentDate | date:'EEEE, dd/MM/yyyy' }}
+
+                </a>
+              <div class="d-inline-block fh5co_trading_posotion_relative"><a href="./assets/#" class="treding_btn">Trending</a>
+                  <div class="fh5co_treding_position_absolute"></div>
+              </div>
+              <a href="./assets/#" class="color_fff fh5co_mediya_setting">Báo tiếng việt được cập nhật liên tục mọi lúc, mọi nơi</a>
+          </div>
+      </div>
+  </div>
+</div>
 <div class="container-fluid">
-  <div class="row align-items-center bg-light px-lg-5">
-      <div class="col-12 col-md-8">
-          <div class="d-flex justify-content-between">
-              <div class="bg-primary text-white text-center py-2" style="width: 100px;">Tranding</div>
-              <div class="owl-carousel owl-carousel-1 tranding-carousel position-relative d-inline-flex align-items-center ml-3" style="width: calc(100% - 100px); padding-left: 90px;">
-                  <div class="text-truncate"><a class="text-secondary" href="">Labore sit justo amet eos sed, et sanctus dolor diam eos</a></div>
-                  <div class="text-truncate"><a class="text-secondary" href="">Gubergren elitr amet eirmod et lorem diam elitr, ut est erat Gubergren elitr amet eirmod et lorem diam elitr, ut est erat</a></div>
-              </div>
+  <div class="container">
+      <div class="row">
+          <div class="col-12 col-md-3 fh5co_padding_menu">
+              <img src="./assets/images/logo.png" alt="img" class="fh5co_logo_width"/>
           </div>
-      </div>
-      <div class="col-md-4 text-right d-none d-md-block">
-          Monday, January 01, 2045
-      </div>
-  </div>
-  <div class="row align-items-center py-2 px-lg-5">
-      <div class="col-lg-4">
-          <a href="" class="navbar-brand d-none d-lg-block">
-              <h1 class="m-0 display-5 text-uppercase"><span class="text-primary">News</span>Room</h1>
-          </a>
-      </div>
-      <div class="col-lg-8 text-center text-lg-right">
-          <img class="img-fluid" src="img/ads-700x70.jpg" alt="">
+          <div class="col-12 col-md-9 align-self-center fh5co_mediya_right">
+              <div class="text-center d-inline-block">
+                  <a class="fh5co_display_table"><div class="fh5co_verticle_middle"><i class="fa fa-search"></i></div></a>
+              </div>
+              <div class="text-center d-inline-block">
+                  <a class="fh5co_display_table"><div class="fh5co_verticle_middle"><i class="fa fa-linkedin"></i></div></a>
+              </div>
+              <div class="text-center d-inline-block">
+                  <a class="fh5co_display_table"><div class="fh5co_verticle_middle"><i class="fa fa-google-plus"></i></div></a>
+              </div>
+              <div class="text-center d-inline-block">
+                  <a href="./assets/https://twitter.com/fh5co" target="_blank" class="fh5co_display_table"><div class="fh5co_verticle_middle"><i class="fa fa-twitter"></i></div></a>
+              </div>
+              <div class="text-center d-inline-block">
+                  <a href="./assets/https://fb.com/fh5co" target="_blank" class="fh5co_display_table"><div class="fh5co_verticle_middle"><i class="fa fa-facebook"></i></div></a>
+              </div>
+              <!--<div class="d-inline-block text-center"><img src="./assets/images/country.png" alt="img" class="fh5co_country_width"/></div>-->
+
+              <div class="clearfix"></div>
+          </div>
       </div>
   </div>
 </div>
-<!-- Topbar End -->
-
-
-<!-- Navbar Start -->
-<div class="container-fluid p-0 mb-3">
-  <nav class="navbar navbar-expand-lg bg-light navbar-light py-2 py-lg-0 px-lg-5">
-      <a href="" class="navbar-brand d-block d-lg-none">
-          <h1 class="m-0 display-5 text-uppercase"><span class="text-primary">News</span>Room</h1>
-      </a>
-      <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-          <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse justify-content-between px-0 px-lg-3" id="navbarCollapse">
-          <div class="navbar-nav mr-auto py-0">
-              <a href="index.html" class="nav-item nav-link active">Home</a>
-              <a href="category.html" class="nav-item nav-link">Categories</a>
-              <a href="single.html" class="nav-item nav-link">Single News</a>
-              <div class="nav-item dropdown">
-                  <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Dropdown</a>
-                  <div class="dropdown-menu rounded-0 m-0">
-                      <a href="#" class="dropdown-item">Menu item 1</a>
-                      <a href="#" class="dropdown-item">Menu item 2</a>
-                      <a href="#" class="dropdown-item">Menu item 3</a>
-                  </div>
-              </div>
-              <a href="contact.html" class="nav-item nav-link">Contact</a>
+<div class="container-fluid bg-faded fh5co_padd_mediya padding_786">
+  <div class="container padding_786">
+      <nav class="navbar navbar-toggleable-md navbar-light ">
+          <button class="navbar-toggler navbar-toggler-right mt-3" type="button" data-toggle="collapse"
+                  data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                  aria-label="Toggle navigation"><span class="fa fa-bars"></span></button>
+          <a class="navbar-brand" href="./assets/#"><img src="./assets/images/logo.png" alt="img" class="mobile_logo_width"/></a>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav mr-auto">
+                  <li class="nav-item active">
+                      <a class="nav-link" href="./assets/index.html">Trang chủ <span class="sr-only">(current)</span></a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="./assets/#" id="dropdownMenuButton2" data-toggle="dropdown"
+                       aria-haspopup="true" aria-expanded="false">Thể loại <span class="sr-only">(current)</span></a>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuLink_1">
+                        <a *ngFor="let item of category.item" class="dropdown-item" [routerLink]="['/category']" routerLinkActive="router-link-active" >{{item.name}}</a>
+                    </div>
+                </li>
+                  <li class="nav-item ">
+                      <a class="nav-link" href="./assets/single.html">Mới nhất <span class="sr-only">(current)</span></a>
+                  </li>
+                  <li class="nav-item ">
+                    <a class="nav-link" href="./assets/single.html">Xu hướng <span class="sr-only">(current)</span></a>
+                </li>
+                  <li class="nav-item ">
+                      <a class="nav-link" href="./assets/Contact_us.html">Liên hệ <span class="sr-only">(current)</span></a>
+                  </li>
+              </ul>
           </div>
-          <div class="input-group ml-auto" style="width: 100%; max-width: 300px;">
-              <input type="text" class="form-control" placeholder="Keyword">
-              <div class="input-group-append">
-                  <button class="input-group-text text-secondary"><i
-                          class="fa fa-search"></i></button>
-              </div>
-          </div>
-      </div>
-  </nav>
+      </nav>
+  </div>
 </div>
-<!-- Navbar End -->
