Call to the category api

--- a/resources/NewsApplication_UI/src/app/Layout/template/admin-template/admin-template.component.html
+++ b/resources/NewsApplication_UI/src/app/Layout/template/admin-template/admin-template.component.html
@@ -2,29 +2,10 @@
   <app-header-admin></app-header-admin>
   <div class="container-fluid page-body-wrapper">
     <app-leftbar-admin></app-leftbar-admin>
-    <div class="main-panel">
+    <div style="padding-top: 70px;" class="main-panel">
       <router-outlet></router-outlet>
-      <div class="content-wrapper"></div>
-      <footer class="footer">
-        <div class="footer-inner-wraper">
-          <div
-            class="d-sm-flex justify-content-center justify-content-sm-between"
-          >
-            <span
-              class="text-muted text-center text-sm-left d-block d-sm-inline-block"
-              >Copyright © 2023
-              <a href="https://www.bootstrapdash.com/" target="_blank"
-                >Bootstrap Dash</a
-              >. All rights reserved.</span
-            >
-            <span
-              class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center"
-              >Hand-crafted & made with
-              <i class="mdi mdi-heart text-danger"></i
-            ></span>
-          </div>
-        </div>
-      </footer>
+
+      
     </div>
   </div>
 </div>
