--- a/resources/NewsApplication_UI/src/app/Layout/partials/client/footer-client/footer-client.component.html
+++ b/resources/NewsApplication_UI/src/app/Layout/partials/client/footer-client/footer-client.component.html
@@ -27,14 +27,7 @@
           <div class="col-12 col-md-3 col-lg-2">
               <div class="footer_main_title py-3"> Category</div>
               <ul class="footer_menu">
-                  <li><a href="./assets/#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp; Business</a></li>
-                  <li><a href="./assets/#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp; Entertainment</a></li>
-                  <li><a href="./assets/#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp; Environment</a></li>
-                  <li><a href="./assets/#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp; Health</a></li>
-                  <li><a href="./assets/#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp; Life style</a></li>
-                  <li><a href="./assets/#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp; Politics</a></li>
-                  <li><a href="./assets/#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp; Technology</a></li>
-                  <li><a href="./assets/#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp; World</a></li>
+                  <li *ngFor="let item of category.item"><a href="./assets/#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp; {{item.name}}</a></li>
               </ul>
           </div>
           <div class="col-12 col-md-5 col-lg-3 position_footer_relative">
