add user authentication

--- a/resources/NewsApplication_UI/src/app/Layout/partials/admin/header-admin/header-admin.component.html
+++ b/resources/NewsApplication_UI/src/app/Layout/partials/admin/header-admin/header-admin.component.html
@@ -35,7 +35,7 @@
       </form>
     </div>
     <ul class="navbar-nav navbar-nav-right">
-     
+
       <li class="nav-item nav-profile dropdown">
         <a
           class="nav-link dropdown-toggle"
@@ -45,7 +45,7 @@
           aria-expanded="false"
         >
           <div class="nav-profile-img">
-            <img src="../../../assets/images/faces/face28.png" alt="image" />
+            <img src="https://quicknew.s3.us-east-1.amazonaws.com/avatars/66ec6583859e8-lethihoa0779" alt="image" />
           </div>
           <div class="nav-profile-text">
             <p class="mb-1 text-black">Henry Klein</p>
