--- a/resources/NewsApplication_UI/src/app/Layout/partials/admin/leftbar-admin/leftbar-admin.component.html
+++ b/resources/NewsApplication_UI/src/app/Layout/partials/admin/leftbar-admin/leftbar-admin.component.html
@@ -145,7 +145,7 @@
 
     <li class="nav-item sidebar-user-actions">
       <div class="sidebar-user-menu">
-        <a href="#" class="nav-link"
+        <a (click)="logOut()" href="#" class="nav-link"
           ><i class="mdi mdi-logout menu-icon"></i>
           <span class="menu-title">Log Out</span></a
         >
