--- a/resources/NewsApplication_UI/src/app/Layout/partials/client/header-client/header-client.component.html
+++ b/resources/NewsApplication_UI/src/app/Layout/partials/client/header-client/header-client.component.html
@@ -9,7 +9,7 @@
                   <div class="fh5co_treding_position_absolute"></div>
               </div>
               <a href="./assets/#" class="color_fff fh5co_mediya_setting">Báo tiếng việt được cập nhật liên tục mọi lúc, mọi nơi</a>
-              <ul *ngIf='currentUser.name != ""; else showLoginSignup' class="ht-menu">
+              <ul *ngIf='currentUser.name != null; else showLoginSignup' class="ht-menu">
                 <li>
                     <a  [routerLink]="['/account']"
                         class="currency-selector-wrapper">{{currentUser.name}}</a>
