update base feature article

--- a/resources/NewsApplication_UI/src/app/Layout/partials/admin/header-admin/header-admin.component.html
+++ b/resources/NewsApplication_UI/src/app/Layout/partials/admin/header-admin/header-admin.component.html
@@ -5,12 +5,10 @@
   <div
     class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center"
   >
-    <a class="navbar-brand brand-logo" href="index.html"
-      ><img src="../../../assets/images/logo.svg" alt="logo"
-    /></a>
-    <a class="navbar-brand brand-logo-mini" href="index.html"
-      ><img src="../../../assets/images/logo-mini.svg" alt="logo"
-    /></a>
+    <a style="color: aliceblue;" class="navbar-brand brand-logo" routerLink="/"
+      >24 News</a>
+    <a style="color: aliceblue;"  class="navbar-brand brand-logo-mini" routerLink="/"
+      >24 News</a>
   </div>
   <div class="navbar-menu-wrapper d-flex align-items-stretch">
     <button
