--- a/resources/NewsApplication_UI/src/app/Layout/partials/admin/leftbar-admin/leftbar-admin.component.html
+++ b/resources/NewsApplication_UI/src/app/Layout/partials/admin/leftbar-admin/leftbar-admin.component.html
@@ -27,12 +27,12 @@
       <div class="collapse" id="ui-basic">
         <ul class="nav flex-column sub-menu">
           <li class="nav-item">
-            <a class="nav-link" href="pages/ui-features/buttons.html"
+            <a class="nav-link" routerLink="/category"
               >Thể loại</a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="pages/ui-features/dropdowns.html"
+            <a class="nav-link" routerLink="/tag"
               >Thẻ</a
             >
           </li>
@@ -57,7 +57,7 @@
           <li class="nav-item">
             <a class="nav-link" href="pages/icons/mdi.html">Duyệt bài viết</a>
             <a class="nav-link" href="pages/icons/mdi.html">Tất cả bài viết</a>
-            <a class="nav-link" href="pages/icons/mdi.html">Bài viết của tôi</a>
+            <a class="nav-link" routerLink="/article">Bài viết của tôi</a>
           </li>
         </ul>
       </div>
