--- a/resources/NewsApplication_UI/src/app/Modules/admin/tag/tag.component.html
+++ b/resources/NewsApplication_UI/src/app/Modules/admin/tag/tag.component.html
@@ -75,8 +75,8 @@
         >
           <thead class="thead-dark">
             <tr>
-              <th>Mã thể loại</th>
-              <th>Tên thể loại</th>
+              <th>Mã thẻ</th>
+              <th>Tên thẻ</th>
               <th>Mô tả</th>
               <th>Thao tác</th>
             </tr>
