--- a/resources/NewsApplication_UI/src/app/Modules/admin/user-article/user-article.component.html
+++ b/resources/NewsApplication_UI/src/app/Modules/admin/user-article/user-article.component.html
@@ -77,7 +77,7 @@
                   name="editor"
                   [editor]="Editor"
                   (ready)="onReady($event)"
-
+                  [config]="editorConfig"
                   (uploadImage)="onFileUpload($event)"
                   required
                 >
@@ -144,7 +144,7 @@
                   ><i class="fa-solid fa-trash-can"></i
                 ></a>
                 <a
-                  (click)="getArticleById(x.id)"
+                  (click)="getArticleById(x)"
                   data-bs-toggle="modal"
                   data-bs-target="#exampleModal"
                   class="btn btn-warning action-btn"
